[tool.poetry]
name = "fastapi-login"
version = "1.10.3"
# metadata
authors = [
  "Max Rausch-Dupont <maxrd79@gmail.com>",
  "Weiliang Li <to.be.impressive@gmail.com>",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Flask-Login like package for FastAPI"
documentation = "https://fastapi-login.readthedocs.io/"
homepage = "https://github.com/MushroomMaula/fastapi_login"
include = ["fastapi_login/py.typed"]
license = "MIT"
maintainers = [
  "Weiliang Li <to.be.impressive@gmail.com>",
]
packages = [
  {include = "fastapi_login"},
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.1.1"

cryptography = {version = ">=39.0.1,<45.0.0", optional = true}
fastapi = "*"
pyjwt = ">=2.4"

[tool.poetry.extras]
asymmetric = ["cryptography"]

[tool.poetry.group.dev.dependencies]
markdown-include = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {version = "^0.27.0", python = "^3.9", extras = ["python"]}
pymdown-extensions = "*"
ruff = "^0.8.2"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = ">=8"
pytest-asyncio = "*"
pytest-lazy-fixtures = "^1.1.1"

[tool.poetry.group.example.dependencies]
email-validator = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "*"}
pydantic = ">=2.0.1"
pydantic_settings = ">=2.0.1"
python-dotenv = "^1.0.0"
python-multipart = ">=0.0.19"
sqlalchemy = "^2.0.18"
sqlalchemy-stubs = "^0.4"
uvicorn = ">=0.27.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "--ignore=examples"
asyncio_default_fixture_loop_scope = "session"
